Bugfix - Fix the style of .admonition-title css class on mobile devices.

--- a/src/mwiki/static/style.css
+++ b/src/mwiki/static/style.css
@@ -1429,7 +1429,7 @@ main thead th {
     }
 
     .admonition-title {
-        margin: -6px -30px !important;
+        /* margin: -6px -30px !important; */
         margin-top: 0px !important;
     }
 
